# RoboFEI-HR

./: CMakeLists.txt  README.md  readme.md  setup.sh
Blackboard/include/: blackboard.h
Communication/: CMakeLists.txt
Control/: CMakeLists.txt
Control/Data/: config.ini
Control/Linux/project/tutorial/action_script/: main.cpp
Control/src/: Inverse_Kinematic.cpp  andar.cpp  andar_backup.cpp  andar_backup2.cpp  andar_de_lado.cpp  andar_marchando.cpp  backup_andarrapido  chute.cpp  control.cpp  desligar_servos.cpp  espera_mov.cpp  greetings.cpp  kbhit.cpp  keyboard.cpp  levantar_de_costas backup.cpp  levantar_de_costas.cpp  levantar_de_frente.cpp  roboereto.cpp  swing.cpp  virar.cpp
Decision/src/: decision.cpp  decision.py
Dynamixel/include/: dynamixel.h
IMU/src/: imu.cpp
Vision/: CMakeLists.txt
Vision/src/: vision.cpp
conf_robos/01/: config.ini
conf_robos/02/: config.ini
conf_robos/03/: config.ini
start_all/: start_all.sh  start_vision.sh
